// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Full Custom Profiles - Complete File Verification with YAML Parsing > should export an OpenCode host-file bind mount in full custom mode > full-custom-opencode-host-file-zh-CN 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持:
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # OpenCode Runtime Configuration
      # Uses the managed OpenCode runtime contract baked into the unified image
      # ==================================================
      AI__Providers__Providers__OpenCodeCli__Enabled: "true"
      AI__Providers__Providers__OpenCodeCli__Type: "OpenCodeCli"
      AI__Providers__Providers__OpenCodeCli__ExecutablePath: "opencode"
      AI__OpenCode__Enabled: "true"
      AI__OpenCode__ExecutablePath: "opencode"
      AI__OpenCode__Model: "anthropic/claude-sonnet-4"
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      - hagicode_data:/app/data
      - /srv/opencode/opencode.json:/home/hagicode/.config/opencode/opencode.json
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Full Custom Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for Linux non-root user with internal database > full-custom-linux-nonroot-internal-db-zh-CN 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持:
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: postgresql
      ConnectionStrings__Default: "Host=postgres;Port=5432;Database=hagicode;Username=postgres;Password=postgres"
      License__Activation__LicenseKey: "public-license-key"
      PUID: 1000
      PGID: 1000
      # ==================================================
      # Claude Runtime Configuration
      # All providers use ANTHROPIC_AUTH_TOKEN
      # ANTHROPIC_URL is set for ZAI, Aliyun, and custom providers
      # ==================================================
      # Anthropic Official API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # No ANTHROPIC_URL needed - uses default Anthropic endpoint
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      - hagicode_data:/app/data
      - claude-data:/home/hagicode/.claude
    depends_on:
      postgres:
        condition: service_healthy
    networks:
      - pcode-network
    restart: unless-stopped

  postgres:
    image: bitnami/postgresql:latest
    environment:
      POSTGRES_DATABASE: hagicode
      POSTGRES_USER: postgres
      POSTGRES_PASSWORD: postgres
      POSTGRES_HOST_AUTH_METHOD: trust
      TZ: Asia/Shanghai
    volumes:
      - postgres-data:/bitnami/postgresql
    healthcheck:
      test: ["CMD", "pg_isready", "-U", "postgres"]
      interval: 10s
      timeout: 3s
      retries: 3
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  claude-data:
  postgres-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Full Custom Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for Linux root user with internal database > full-custom-linux-root-internal-db-zh-CN 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持:
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: postgresql
      ConnectionStrings__Default: "Host=postgres;Port=5432;Database=hagicode;Username=postgres;Password=postgres"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude Runtime Configuration
      # All providers use ANTHROPIC_AUTH_TOKEN
      # ANTHROPIC_URL is set for ZAI, Aliyun, and custom providers
      # ==================================================
      # Anthropic Official API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # No ANTHROPIC_URL needed - uses default Anthropic endpoint
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      - hagicode_data:/app/data
      - claude-data:/home/hagicode/.claude
    depends_on:
      postgres:
        condition: service_healthy
    networks:
      - pcode-network
    restart: unless-stopped

  postgres:
    image: bitnami/postgresql:latest
    environment:
      POSTGRES_DATABASE: hagicode
      POSTGRES_USER: postgres
      POSTGRES_PASSWORD: postgres
      POSTGRES_HOST_AUTH_METHOD: trust
      TZ: Asia/Shanghai
    volumes:
      - postgres-data:/bitnami/postgresql
    healthcheck:
      test: ["CMD", "pg_isready", "-U", "postgres"]
      interval: 10s
      timeout: 3s
      retries: 3
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  claude-data:
  postgres-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Full Custom Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for Windows deployment with internal database > full-custom-windows-internal-db-zh-CN 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持:
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: postgresql
      ConnectionStrings__Default: "Host=postgres;Port=5432;Database=hagicode;Username=postgres;Password=postgres"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude Runtime Configuration
      # All providers use ANTHROPIC_AUTH_TOKEN
      # ANTHROPIC_URL is set for ZAI, Aliyun, and custom providers
      # ==================================================
      # Anthropic Official API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # No ANTHROPIC_URL needed - uses default Anthropic endpoint
    ports:
      - "8080:45000"
    volumes:
      - C:\\\\repos:/app/workdir
      - hagicode_data:/app/data
      - claude-data:/home/hagicode/.claude
    depends_on:
      postgres:
        condition: service_healthy
    networks:
      - pcode-network
    restart: unless-stopped

  postgres:
    image: bitnami/postgresql:latest
    environment:
      POSTGRES_DATABASE: hagicode
      POSTGRES_USER: postgres
      POSTGRES_PASSWORD: postgres
      POSTGRES_HOST_AUTH_METHOD: trust
      TZ: Asia/Shanghai
    volumes:
      - postgres-data:/bitnami/postgresql
    healthcheck:
      test: ["CMD", "pg_isready", "-U", "postgres"]
      interval: 10s
      timeout: 3s
      retries: 3
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  claude-data:
  postgres-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Full Custom Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for bind mount volume configuration > full-custom-linux-bind-mount-zh-CN 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持:
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: postgresql
      ConnectionStrings__Default: "Host=postgres;Port=5432;Database=hagicode;Username=postgres;Password=postgres"
      License__Activation__LicenseKey: "public-license-key"
      PUID: 1000
      PGID: 1000
      # ==================================================
      # Claude Runtime Configuration
      # All providers use ANTHROPIC_AUTH_TOKEN
      # ANTHROPIC_URL is set for ZAI, Aliyun, and custom providers
      # ==================================================
      # Anthropic Official API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # No ANTHROPIC_URL needed - uses default Anthropic endpoint
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      - hagicode_data:/app/data
      - claude-data:/home/hagicode/.claude
    depends_on:
      postgres:
        condition: service_healthy
    networks:
      - pcode-network
    restart: unless-stopped

  postgres:
    image: bitnami/postgresql:latest
    environment:
      POSTGRES_DATABASE: hagicode
      POSTGRES_USER: postgres
      POSTGRES_PASSWORD: postgres
      POSTGRES_HOST_AUTH_METHOD: trust
      TZ: Asia/Shanghai
    volumes:
      - /data/postgres:/bitnami/postgresql
    healthcheck:
      test: ["CMD", "pg_isready", "-U", "postgres"]
      interval: 10s
      timeout: 3s
      retries: 3
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Full Custom Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for external database configuration > full-custom-external-db-zh-CN 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持:
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: postgresql
      ConnectionStrings__Default: "Host=external-postgres.example.com;Port=5432;Database=hagicode;Username=postgres;Password=postgres"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude Runtime Configuration
      # All providers use ANTHROPIC_AUTH_TOKEN
      # ANTHROPIC_URL is set for ZAI, Aliyun, and custom providers
      # ==================================================
      # Anthropic Official API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # No ANTHROPIC_URL needed - uses default Anthropic endpoint
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      - hagicode_data:/app/data
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Full Custom Profiles - Complete File Verification with YAML Parsing > should keep only retained executor volumes in full custom mode > full-custom-retained-executor-volumes-zh-CN 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持:
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Codex Runtime Configuration
      # Uses CODEX_* environment variables
      # OPENAI_* variables are accepted as compatibility aliases
      # ==================================================
      CODEX_API_KEY: "test-codex-key"
      # Compatibility alias: OPENAI_API_KEY = CODEX_API_KEY
      # CODEX_BASE_URL: optional, uses default if not set
      # Compatibility alias: OPENAI_BASE_URL = CODEX_BASE_URL
      # ==================================================
      # OpenCode Runtime Configuration
      # Uses the managed OpenCode runtime contract baked into the unified image
      # ==================================================
      AI__Providers__Providers__OpenCodeCli__Enabled: "true"
      AI__Providers__Providers__OpenCodeCli__Type: "OpenCodeCli"
      AI__Providers__Providers__OpenCodeCli__ExecutablePath: "opencode"
      AI__OpenCode__Enabled: "true"
      AI__OpenCode__ExecutablePath: "opencode"
      AI__OpenCode__Model: "anthropic/claude-sonnet-4"
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      - hagicode_data:/app/data
      - codex-data:/home/hagicode/.codex
      - opencode-config-data:/home/hagicode/.config/opencode
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  codex-data:
  opencode-config-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Full Custom Profiles - Complete File Verification with YAML Parsing > should not emit removed executor services or volumes in full custom mode > full-custom-no-removed-executors-zh-CN 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持:
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Codex Runtime Configuration
      # Uses CODEX_* environment variables
      # OPENAI_* variables are accepted as compatibility aliases
      # ==================================================
      CODEX_API_KEY: "test-codex-key"
      # Compatibility alias: OPENAI_API_KEY = CODEX_API_KEY
      # CODEX_BASE_URL: optional, uses default if not set
      # Compatibility alias: OPENAI_BASE_URL = CODEX_BASE_URL
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      - hagicode_data:/app/data
      - claude-data:/home/hagicode/.claude
      - codex-data:/home/hagicode/.codex
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  claude-data:
  codex-data:

networks:
  pcode-network:
    driver: bridge"
`;
